--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -47,38 +47,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "tokenized = word_tokenize(string)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# firstRefine = \"\"\n",
-    "# for word in tokenized:\n",
-    "firstRefine = \" \".join([word for word in tokenized if word not in synWord])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'search for sales applications at Amazon'"
+       "['search', 'for', 'sales', 'applications', 'at', 'Amazon']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenized = word_tokenize(string)\n",
+    "tokenized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "firstRefine = \"\"\n",
+    "for word in tokenized:\n",
+    "    flag = 0\n",
+    "    for cur in synWord:\n",
+    "        if(word in cur):\n",
+    "            flag = 1\n",
+    "            break\n",
+    "    if(flag == 0):\n",
+    "        firstRefine += word + \" \""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'for sales applications at Amazon '"
+      ]
+     },
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,8 +120,7 @@
     }
    ],
    "source": [
-    "wr = \"search\" \n",
-    "wr in synWord"
+    "# NER tagging and removing\n"
    ]
   }
  ],
