--- a/Company name extraction.ipynb
+++ b/Company name extraction.ipynb
@@ -24,14 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from nltk import pos_tag\n",
-    "from nltk import RegexpChunkParser"
+    "from nltk import pos_tag"
    ]
   },
   {
@@ -49,7 +48,7 @@
    ],
    "source": [
     "if(position == \"\"):\n",
-    "    print(\"LOl\")"
+    "    #then execute this code"
    ]
   },
   {
@@ -108,7 +107,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "companyName = \"\"\n",
