--- a/final position identifier.ipynb
+++ b/final position identifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.tree import Tree\n",
     "from nltk.stem import PorterStemmer\n",
-    "\n",
+    "import numpy as np\n",
     "from LinkedIn_Operation_identification import findSynonyms"
    ]
   },
@@ -34,11 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# synonymz"
+    "import pandas as pd\n",
+    "df = pd.DataFrame(synonymz)\n",
+    "df.to_csv('designSyn.txt')"
    ]
   },
   {
