--- a/final position identifier.ipynb
+++ b/final position identifier.ipynb
@@ -34,13 +34,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['position',\n",
+       "  'وَقْفَة',\n",
+       "  'rank',\n",
+       "  'academicianship',\n",
+       "  'accountantship',\n",
+       "  'admiralty',\n",
+       "  'ambassadorship',\n",
+       "  'angular position',\n",
+       "  'anomaly',\n",
+       "  'anteriority',\n",
+       "  'apostleship',\n",
+       "  'apprenticeship',\n",
+       "  'asana',\n",
+       "  'associateship',\n",
+       "  'attorneyship',\n",
+       "  'back',\n",
+       "  'bailiffship',\n",
+       "  'ballet position',\n",
+       "  'baronetage',\n",
+       "  \"bird's eye view\"],\n",
+       " ['openings', 'Doors', 'ora', 'pore', 'crowd', 'space'],\n",
+       " ['profiles'],\n",
+       " ['jobs',\n",
+       "  'Jobs',\n",
+       "  'Most men',\n",
+       "  'interview',\n",
+       "  'work',\n",
+       "  'jobsian',\n",
+       "  'Many women',\n",
+       "  'Surgeons',\n",
+       "  'wissenschafterin',\n",
+       "  'wissenschafter',\n",
+       "  'Some jobs',\n",
+       "  \"Workaholics' lives\",\n",
+       "  'casting agent',\n",
+       "  'совместительство',\n",
+       "  '乔布斯',\n",
+       "  '喬布斯']]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pandas as pd\n",
-    "df = pd.DataFrame(synonymz)\n",
-    "df.to_csv('designSyn.txt')"
+    "# import pandas as pd\n",
+    "# df = pd.DataFrame(synonymz)\n",
+    "# df.to_csv('designSyn.csv')\n",
+    "# synonymz"
    ]
   },
   {
