--- a/final position identifier.ipynb
+++ b/final position identifier.ipynb
@@ -1,9 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This file finds the designation of the input string\n",
+    " Eg. Input: \"search for SDE profiles at LinkedIn\" \n",
+    "     Output: SDE profiles"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import nltk\n",
@@ -17,7 +28,9 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "todo = ['position', 'openings', 'profiles', 'jobs']\n",
@@ -30,66 +43,6 @@
     "        if syn not in curSyn:\n",
     "            curSyn.append(syn)\n",
     "    synonymz.append(curSyn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['position',\n",
-       "  'وَقْفَة',\n",
-       "  'rank',\n",
-       "  'academicianship',\n",
-       "  'accountantship',\n",
-       "  'admiralty',\n",
-       "  'ambassadorship',\n",
-       "  'angular position',\n",
-       "  'anomaly',\n",
-       "  'anteriority',\n",
-       "  'apostleship',\n",
-       "  'apprenticeship',\n",
-       "  'asana',\n",
-       "  'associateship',\n",
-       "  'attorneyship',\n",
-       "  'back',\n",
-       "  'bailiffship',\n",
-       "  'ballet position',\n",
-       "  'baronetage',\n",
-       "  \"bird's eye view\"],\n",
-       " ['openings', 'Doors', 'ora', 'pore', 'crowd', 'space'],\n",
-       " ['profiles'],\n",
-       " ['jobs',\n",
-       "  'Jobs',\n",
-       "  'Most men',\n",
-       "  'interview',\n",
-       "  'work',\n",
-       "  'jobsian',\n",
-       "  'Many women',\n",
-       "  'Surgeons',\n",
-       "  'wissenschafterin',\n",
-       "  'wissenschafter',\n",
-       "  'Some jobs',\n",
-       "  \"Workaholics' lives\",\n",
-       "  'casting agent',\n",
-       "  'совместительство',\n",
-       "  '乔布斯',\n",
-       "  '喬布斯']]"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# import pandas as pd\n",
-    "# df = pd.DataFrame(synonymz)\n",
-    "# df.to_csv('designSyn.csv')\n",
-    "# synonymz"
    ]
   },
   {
